--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    
     <header>
         <h1>Music Playlist Explorer</h1>
     <a href="featured.html" id="featured-btn">
@@ -24,6 +25,22 @@
    
 
     <main>
+        <form id="new-playlist-form">
+            <h2>Add new Playlist</h2>
+            <input type="text" id="playlist-name" placeholder="Playlist Name" required>
+            <input type="text" id="playlist-author" placeholder="Author" required>
+            <input type="text" id="playlist-art" placeholder="Cover Image URL" required>
+            <div id="songs-container">
+    <h3>Songs</h3>
+    <div class="song-input">
+      <input type="text" class="song-title" placeholder="Song Title" required>
+      <input type="text" class="song-artist" placeholder="Artist" required>
+    </div>
+  </div>
+
+  <button type="button" id="add-song-btn">Add Another Song</button>
+  <button type="submit">Add Playlist</button>
+        </form>
       <section class="playlist-cards"> 
       </section>
 
